Fix primary hero loading skeleton on mobile (#8781)

--- a/src/amo/components/HeroRecommendation/styles.scss
+++ b/src/amo/components/HeroRecommendation/styles.scss
@@ -123,9 +123,11 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     margin: 0 auto;
 
     @include respond-to(large) {
+      flex-grow: 0;
       width: 576px;
     }
   }
